# wire_cutting_mp

./: README.md
wire_cutting/: CMakeLists.txt  package.xml
wire_cutting/config/: HardProb (copy).txt  HardProb cop.txt  HardProb.txt  HardProb_v2.txt  Stairs4m.txt  examples.rviz  ignitions_config.config  irb6400r.srdf  irb6400r_freespace.srdf  irb6400r_ignition.srdf  linear_test.txt  test.prg  tool_poses (copy).csv  tool_poses.csv  tool_poses_freespace_bbox.csv
wire_cutting/include/: four_bar_linkage_constraint.h  iterations_plotter.h  term_info_wc.h  test_results.h  test_wc.h  timer.h  trajopt_wire_cutting_composite_profile.h  trajopt_wire_cutting_plan_profile.h  trajopt_wire_cutting_solver_profile.h  wc_utils.h  wire_cutting.h  wire_cutting_problem_generator.h
wire_cutting/include/tesseract_ros_examples/: wire_cutting.h
wire_cutting/launch/: basic_cartesian_example2.launch  iterations_plotter.launch  wire_cutting.launch  wire_cutting_norviz.launch
wire_cutting/meshes/: CH_left.stl  CH_left_right.stl  CH_right.stl  CH_top.stl  Floor.stl  Pedestal.stl  carbon_hotwire.stl  hotwire_collision_mesh.stl
wire_cutting/planners/: composite_cut_profile.xml  composite_p2p_profile.xml  plan_cut_profile.xml  plan_freespace_profile.xml
wire_cutting/programs/: Cone.txt  Cone_short.txt  D21st.txt  Design01_2.txt  Saddel.txt  SimplePlaneRotation.txt  Stairs4m.txt  Stairs4mShort.txt  bench1.txt  bench2.txt  cone.txt  ex.txt  rectangle.txt  reduce.sh  saddel.txt  sides.txt  sweep.txt
wire_cutting/programs/new/: Design_02_rev1.txt  cone.txt  saddel_full.txt
wire_cutting/programs/old/: D21st_short.txt  SimplePlaneTranslation.txt  multi_modal.txt  saddel_short.txt  sampling.txt
wire_cutting/results/vert/: readme.txt
wire_cutting/src/: four_bar_linkage_constraint.cpp  term_info_wc.cpp  test_wc.cpp  trajopt_wire_cutting_composite_profile.cpp  trajopt_wire_cutting_plan_profile.cpp  trajopt_wire_cutting_solver_profile.cpp  wc_utils.cpp  wire_cutting.code-workspace  wire_cutting.cpp  wire_cutting_node.cpp  wire_cutting_problem_generator.cpp  workspace.code-workspace
wire_cutting/src/iterations_plotter/: iterations_plotter.cpp  iterations_plotter_node.cpp
wire_cutting/test/: plot_redundancy.m  redundancy_util.asv  redundancy_util.m  run_tests.sh  test_1.xml
wire_cutting/test/MATLABFIGURES/: Rectangle.fig  Rectangle_results.eps  stairs.fig  translation_problem.fig
wire_cutting/test/cut_basic/: redundancy_util_ex.txt  results_Design01_2.txt  results_Saddel.txt  results_Stairs4m (copy).txt  results_Stairs4m.txt  results_ex.txt
wire_cutting/test/cut_rot_accel/: redundancy_util_sampling.txt  results_ex.txt  results_sampling.txt
wire_cutting/test/cut_trans_pos/: redundancy_util_ex.txt  results_ex.txt
wire_cutting/test/d_j/: redundancy_util_rectangle.txt  results_rectangle.txt
wire_cutting/test/d_jpva/: test_def.xml
wire_cutting/test/ex/: test_def.xml
wire_cutting/test/ex1/: results.txt  results_SimplePlaneRotation.txt  results_SimplePlaneRotation.txt.txt  results_Stairs4m.txt
wire_cutting/test/j/: redundancy_util_Cone_short.txt  redundancy_util_cone.txt  redundancy_util_rectangle.txt  redundancy_util_saddel.txt  redundancy_util_stairs.txt  redundancy_util_sweep.txt  results_Cone_short.txt  results_cone.txt  results_rectangle.txt  results_saddel.txt  results_stairs.txt  results_sweep.txt
wire_cutting/test/jp/: redundancy_util_Cone_short.txt  redundancy_util_cone.txt  redundancy_util_rectangle.txt  redundancy_util_saddel.txt  redundancy_util_stairs.txt  redundancy_util_sweep.txt  results_Cone_short.txt  results_cone.txt  results_rectangle.txt  results_saddel.txt  results_stairs.txt  results_sweep.txt
wire_cutting/test/jpv/: redundancy_util_Cone_short.txt  redundancy_util_cone.txt  redundancy_util_rectangle.txt  redundancy_util_saddel.txt  redundancy_util_stairs.txt  redundancy_util_sweep.txt  results_Cone_short.txt  results_cone.txt  results_rectangle.txt  results_saddel.txt  results_stairs.txt  results_sweep.txt
wire_cutting/test/jpv_d/: test_def.xml
wire_cutting/test/jpva/: redundancy_util_Cone_short.txt  redundancy_util_cone.txt  redundancy_util_rectangle.txt  redundancy_util_saddel.txt  redundancy_util_stairs.txt  redundancy_util_sweep.txt  results_cone.txt  results_rectangle.txt  results_saddel.txt  results_stairs.txt  results_sweep.txt  test_def.xml
wire_cutting/test/jpva_d/: redundancy_util_Cone_short.txt  redundancy_util_rectangle.txt  results_Cone_short.txt  (+1 more)
wire_cutting/urdf/: carbon_hotwire.xacro  carbon_hotwire_freespace_macro.xacro  carbon_hotwire_macro.xacro  irb6400r.urdf  irb6400r.xacro  irb6400r_macro.xacro  irb6400r_macro_parallel.xacro  irb6400r_parallel_macro.xacro  wire_cutting_freespace_workcell.xacro  wire_cutting_workcell.xacro  workcell_v2.urdf
(+229 files in other folders)
